<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mausam</string>
    <string name="permission_title">Permissions</string>
    <string name="location_perm_title">Location</string>
    <string name="storage_perm_title">Storage</string>
    <string name="search_loc_title">Search location</string>
    <string name="search_photo_title">Discover photos</string>
    <string name="favourites_title">Recommended and Downloads</string>
    <string name="search_results_title">Photos</string>
    <string name="images">Images</string>
    <string name="likes">Likes</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="Description">Description</string>
    <string name="color">Color</string>
    <string name="created_on">Created on</string>
    <string name="portfolio">Portfolio</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="see_more_photos">See more photos</string>
    <string name="visit_this_page">Visit this page</string>
    <string name="photographer_photos">Photographer\'s photos</string>
    <string name="photographer_collections">Photographer\'s collections</string>
    <string name="photo_by_photographer">Photos by %s</string>
    <string name="collection_by_photographer">Collections by %s</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Force dark mode</string>
    <string name="data_saver">Data saver</string>
    <string name="cache">Cache</string>
    <string name="curr_loc">Current location</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="buy_me_a_pizza">Buy me a Pizza</string>
    <string name="buy_me_a_healthy_meal">Buy me a healthy meal</string>
    <string name="permission_desc">Please allow below permission to have a seamless experience.</string>
    <string name="location_desc">With this permission, Mausam can automatically detect your location</string>
    <string name="dark_mode_on_desc">The Force will be with you. Always.‍</string>
    <string name="dark_mode_off_desc">Currently following system theme.</string>
    <string name="data_saver_desc">Enabling this option will use low quality images for viewing.</string>
    <string name="cache_desc">If you’re short on storage just click on that CLEAR button.</string>
    <string name="curr_loc_desc">Change location.</string>
    <string name="storage_desc">With this permission, Mausam can download photos and store in the phone storage.</string>
    <string name="search_loc_desc">We understand you don’t want to reveal your  location but Mausam needs it show weather and photos based on it. </string>
    <string name="search_photo_desc">Browse and search photos by some of the best photographers spread across the world and available on Unsplash.</string>
    <string name="favourites_desc">Your all downloads and based on that recommendations will appear here.</string>
    <string name="imp_info_desc">All your favourites are stored locally so if you uninstall app or clear data of Mausam then you will lose your favourites.</string>
    <string name="imp_auto_wallpaper_info_desc">If wallpapers are not changing automatically then try disabling battery optimizations for Mausam in your phone\'s settings.\n\nIf problem still persists then try below manufacturer specific solutions:</string>
    <string name="support_desc">Your donation keeps Mausam app advertisement free.</string>
    <string name="share_app_desc">Share this beautiful app with your friends and family.</string>
    <string name="leave_review_desc">Leave a review and rate the app on Playstore.</string>
    <string name="report_app_desc">Report bugs or send feedback of Mausam.</string>
    <string name="designed_developed_by_desc">Mausam is designed and developed by</string>
    <string name="privacy_desc">Mausam (version %s) does not use any of your personal data and store them on any of our server as I can not afford one 😂.\n\nRead Mausam’s <b>Privacy Policy</b> for more.</string>
    <string name="buy_me_a_pizza_desc">and show me how much you care and love Mausam.</string>
    <string name="buy_me_a_coffee_desc">and show me how much you love Mausam.</string>
    <string name="buy_me_a_healthy_meal_desc">and you save Mausam from advertisements.</string>
    <string name="see_res_used">See what open source libraries and resources used in Mausam.</string>
    <string name="search_loc_box_hint">Search place here</string>
    <string name="search_box_hint">Search here</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="download_image">Download image</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="share">Share</string>
    <string name="more_details">More Details</string>
    <string name="mausam_logo">Mausam Logo</string>
    <string name="skip_btn_text">Skip</string>
    <string name="choose_search_provider_title">Choose search provider</string>
    <string name="last_updated_time">Last updated %s mins ago</string>
    <string name="preview_image">Preview Image</string>
    <string name="photographer_s_image">photographer\'s image</string>
    <string name="settings_button">Settings button</string>
    <string name="ok_caps">OK</string>
    <string name="photos">photos</string>
    <string name="loading_data">loading data</string>
    <string name="saved_to_downloads">Image downloaded successfully</string>
    <string name="saved_to_fav">Saved in Pictures/Mausam/Favourites</string>
    <string name="download_started">Download started</string>
    <string name="adding_to_fav">Adding to Favourites</string>
    <string name="added_to_fav">Added to Favourites</string>
    <string name="removed_from_fav">Removed from Favourites</string>
    <string name="already_downloaded">Already downloaded</string>
    <string name="share_body">Here is a awesome photo %s by %s\n\nGet Mausam app on Playstore and experience a new world of images.\nPowered by Unsplash</string>
    <string name="preparing_home">Preparing home…</string>
    <string name="coming_soon">Coming soon&#8230;</string>
    <string name="downloading">Downloading in %s quality&#8230;</string>
    <string name="more">More</string>
    <string name="see_collections">See Collections</string>
    <string name="clear">Clear</string>
    <string name="imp_info">Important information</string>
    <string name="support">Support development by Donation</string>
    <string name="calculating">calculating</string>
    <string name="using_cache"><b>Currently using %s MB approx</b></string>
    <string name="dismiss">Dismiss</string>
    <string name="storage_perm_granted_msg">Storage permission granted 👍</string>
    <string name="crop">Crop</string>
    <string name="crop_image">Crop Image and Continue</string>
    <string name="wallpaper_set_success">Wallpaper set successfully</string>
    <string name="wallpaper_set_failed">Error while setting Wallpaper</string>
    <string name="see_all">See all</string>
    <string name="downloads">Downloads</string>
    <string name="delete">Delete</string>
    <string name="interested_photographers">Interested photographers</string>
    <string name="empty_download_section_msg">It\'s empty here.\nGo to Discover for exploring photos.</string>
    <string name="error_no_internet">It seems you are offline. Please connect to internet and try again.</string>
    <string name="go_discover">Take me there</string>
    <string name="retry">Retry</string>
    <string name="action_start_search">Start search</string>
    <string name="dummy_title">Title goes here</string>
    <string name="dummy_error">Some error has occurred and this is dummy message</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="color_name">Color name</string>
    <string name="category_name">Category name</string>
    <string name="contain_number_error_msg">Please write a location name without Number</string>
    <string name="contain_special_chars_error_msg">Please write a location name without using space or special characters</string>
    <string name="empty_error_msg">Please enter location name to continue</string>
    <string name="no_gps_error_msg">Can\'t find location when GPS is off.</string>
    <string name="no_permission_error_msg">Location permission is needed to show latest weather details. Please go to settings and allow Location Permission.</string>
    <string name="no_internet_error_msg">Please connect to internet to get latest weather details.</string>
    <string name="search_city_error">%s place weather information not found, you can skip this by the way.</string>
    <string name="error_failed_getting_photos">Oops! failed while getting new photos. Please try again later.</string>
    <string name="error_failed_getting_collections">Oops! failed while getting new collections. Please try again later.</string>
    <string name="failed_getting_collection_error_msg">Sorry, failed while getting collections. Please try again.</string>
    <string name="failed_to_download_no_internet">Error while saving image. Please check your internet.</string>
    <string name="failed_to_download_no_space">Error while saving image. Please check available storage.</string>
    <string name="failed_to_load_image">Unable to load image.\nPlease check your internet.</string>
    <string name="no_storage_permission_msg">Please allow storage permission to perform this operation.</string>
    <string name="something_wrong_msg">Something is wrong. Please try again</string>
    <string name="permission_denied_earlier_msg">You have denied this permission. You can allow this permission from settings</string>
    <string name="storage_perm_denied_msg">You have denied this permission. Please allow storage permission from settings</string>
    <string name="unsplash_txt" translatable="false">Unsplash</string>
    <string name="pixabay_txt" translatable="false">Pixabay</string>
    <string name="developer" translatable="false">Pavitra Raut.</string>
    <string name="download_feature_not_possible_error_msg">Photos download feature will not work without this permission. So please allow Mausam this permission.</string>
    <string name="left_swipe">left swipe</string>
    <string name="right_swipe">right swipe</string>
    <string name="loading">Loading</string>
    <string name="msg_empty_discover">Oops! no new photos found.\nTry searching your favourite %s.</string>
    <string name="msg_empty_photos">Oops! no photos found.\nGo back to Discover and try searching your favourite %s.</string>
    <string name="msg_empty_photographer_photos">Oops! no photos found.\nSee some collections curated by %s.</string>
    <string name="msg_empty_photographer_photos_collections">No photos found of %s.</string>
    <string name="action_go_back">Go back</string>
    <string name="action_scroll_to_top_of_the_page">Scroll to top of the page</string>
    <string name="download_cancelled">Download cancelled.</string>
    <string name="cancel_download">Cancel download</string>
    <string name="small">Small</string>
    <string name="regular">Regular</string>
    <string name="full">Full</string>
    <string name="raw">Raw</string>
    <string name="desc_bs_download_quality">Your selected quality will be used as the preferred quality for photo downloads.</string>
    <string name="desc_bs_interval">Wallpapers will change based on your below selected interval.</string>
    <string name="apply_changes">Done</string>
    <string name="title_change_interval">Interval options</string>
    <string name="one_hour">1 hour</string>
    <string name="three_hours">3 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twenty_four_hours">24 hours</string>
</resources>