<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/lnlUserButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:visibility="visible"
    tools:visibility="visible"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="@dimen/_30dp"
        android:layout_height="5dp"
        android:background="@drawable/track_selector"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <com.rex50.mausam.utils.custom_text_views.SemiBoldTextView
        android:id="@+id/error_msg_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_change_interval"
        android:textSize="20sp"
        android:textColor="@color/black_to_white"
        android:layout_marginHorizontal="@dimen/_16dp"/>


    <com.rex50.mausam.utils.custom_text_views.RegularTextView
        android:id="@+id/tvDownloadDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/desc_bs_interval"
        android:textSize="14sp"
        android:textColor="@color/descColor"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"/>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_6dp"
        app:cardElevation="@dimen/_6dp"
        app:cardCornerRadius="@dimen/_8dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginVertical="@dimen/_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/rgInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rbFull"
                android:padding="@dimen/_8dp">

                <RadioButton
                    android:id="@+id/rb1Hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8dp"
                    android:textColor="@color/black_to_white"
                    android:layout_marginVertical="@dimen/_8dp"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/one_hour" />

                <RadioButton
                    android:id="@+id/rb3Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8dp"
                    android:textColor="@color/black_to_white"
                    android:layout_marginVertical="@dimen/_8dp"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/three_hours" />

                <RadioButton
                    android:id="@+id/rb12Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twelve_hours"
                    android:textColor="@color/black_to_white"
                    android:padding="@dimen/_8dp"
                    android:layout_marginVertical="@dimen/_8dp"
                    android:buttonTint="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/rb24Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8dp"
                    android:textColor="@color/black_to_white"
                    android:layout_marginVertical="@dimen/_8dp"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/twenty_four_hours" />

            </RadioGroup>

            <Button
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black_to_white"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/apply_changes"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:textAllCaps="false"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>