<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/lnlUserButtons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:visibility="visible"
    tools:visibility="visible"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:layout_width="@dimen/_30dp"
        android:layout_height="5dp"
        android:background="@drawable/track_selector"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnUserPortfolio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_to_white"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/portfolio"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnUserInstagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_to_white"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/instagram"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnUserTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_to_white"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/twitter"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnUserVisitThisPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black_to_white"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/visit_this_page"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"/>

</LinearLayout>