<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/accent_to_oliveBlack"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/btn_set_wallpaper"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/set_as_wallpaper"
                android:tint="@color/white_to_accent"
                android:src="@drawable/ic_image"/>

            <ImageView
                android:id="@+id/btn_download_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/download_image"
                android:tint="@color/white_to_accent"
                android:src="@drawable/ic_download"/>

            <ImageView
                android:id="@+id/btn_fav_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/add_to_favourites"
                android:tint="@color/white_to_accent"
                android:src="@drawable/ic_heart"/>

            <ImageView
                android:id="@+id/btn_share_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/share"
                android:tint="@color/white_to_accent"
                android:src="@drawable/ic_share"/>

            <ImageView
                android:id="@+id/btn_more_about_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/more_details"
                android:tint="@color/white_to_accent"
                android:src="@drawable/ic_more_vertical"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>