<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/windowBackground">

    <include layout="@layout/custom_header_general"
        android:id="@+id/header"/>

    <LinearLayout
        android:id="@+id/container_search_providers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/header">

        <com.rex50.mausam.utils.custom_text_views.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_search_provider_title"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/graniteGray"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/provider_unsplash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unsplash_txt"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/colorAccent"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/provider_pixabay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pixabay_txt"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/blueEyes"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/etxt_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:singleLine="true"
        android:textSize="14sp"
        android:hint="@string/search_box_hint"
        android:background="@drawable/bg_general_edittext"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:textColorHint="@color/taupeGray"
        android:layout_below="@+id/container_search_providers"
        android:imeOptions="actionSearch" />

    <com.rex50.mausam.utils.custom_text_views.RegularTextView
        android:id="@+id/txt_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/satinRed"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:layout_below="@+id/etxt_search"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_next_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_btn_text"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorAccent"
        android:visibility="gone"/>

</RelativeLayout>